--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   permission_handler: ^12.0.0+1
   intl: ^0.20.2
   flutter_colorpicker: ^1.1.0
+  firebase_analytics: ^11.4.5
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
